--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
 <footer class="sticky-bottom">
     <div class="container">
-        <i>Copyright &copy; </i>
+        <i>Copyright Edgar Valenzuela &copy; </i>
     </div>
 </footer>
 
