updated links to projects

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <div class="card-body">
                             <h5 class="card-title">Jquery</h5>
                             <p class="card-text">This app was made with Jquery library to dynamically update the HTML pages with a fun, creative, interactive game for web browsers.</p>
-                            <a class="nav-link" id="links" href="https://grrrrocks.github.io/unit-4-game/" target="_blank"><i>Link to visit project</i></a>
+                            <a class="nav-link" id="links" href="https://edgarval.github.io/unit-4-game/" target="_blank"><i>Link to visit project</i></a>
                             </div>
                         </div>
                         <div class="card shadow p-3 mb-5 bg-white rounded">
@@ -86,7 +86,7 @@
                             <div class="card-body">
                             <h5 class="card-title">Javascript</h5>
                             <p class="card-text">This app was made with Javascript for the logic & jQuery to manipulate the HTML. Layed out with valid HTML & stylish CSS.</p>
-                            <a class="nav-link" id="links" href="https://grrrrocks.github.io/trivia-game/" target="_blank"><i>Link to visit project</i></a>
+                            <a class="nav-link" id="links" href="https://edgarval.github.io/unit-4-game/" target="_blank"><i>Link to visit project</i></a>
                             </div>
                         </div>
                         <div class="card shadow p-3 mb-5 bg-white rounded">
@@ -94,7 +94,7 @@
                             <div class="card-body">
                             <h5 class="card-title">Firebase</h5>
                             <p class="card-text">This app was made to incorporate Firebase to host & capture data. The app retrieves & manipulates the information with Moment.js. Provides up-to-date information.</p>
-                            <a class="nav-link" id="links" href="https://grrrrocks.github.io/trains/" target="_blank"><i>Link to visit project</i></a>
+                            <a class="nav-link" id="links" href="https://edgarval.github.io/trains/" target="_blank"><i>Link to visit project</i></a>
                             </div>
                         </div>
                     </div>
@@ -115,7 +115,7 @@
                             <div class="card-body">
                             <h5 class="card-title">API's</h5>
                             <p class="card-text">This app was made with GIPHY API to make a dynamic web page that populates with gifs of your choice. It uses Javascript & jQuery to change the HTML of the site.</p>
-                            <a class="nav-link" id="links" href="https://grrrrocks.github.io/gifphy/" target="_blank"><i>Link to visit project</i></a>
+                            <a class="nav-link" id="links" href="https://edgarval.github.io/gifphy/" target="_blank"><i>Link to visit project</i></a>
                             </div>
                         </div>
                         <div class="card shadow p-3 mb-5 bg-white rounded">
@@ -123,7 +123,7 @@
                             <div class="card-body">
                             <h5 class="card-title">Node JS</h5>
                             <p class="card-text">This project is called Liri & is a language interpretation & recognition interface. A command line node app that takes in parameters & gives back data.</p>
-                            <a class="nav-link" id="links" href="https://github.com/GrrrRocks/liri-node-app" target="_blank"><i>Link to visit project</i></a>
+                            <a class="nav-link" id="links" href="https://edgarval.github.io/liri-node-app/" target="_blank"><i>Link to visit project</i></a>
                             </div>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                             <div class="card-body">
                             <h5 class="card-title">MySQL</h5>
                             <p class="card-text">This project is a Amazon-like storefront with the MySQL skills I'v learned. It demonstrates how to use/create databases with MySQL, how to update, insert & delete data within the database.</p>
-                            <a class="nav-link" id="links" href="https://github.com/GrrrRocks/Node.js-MySQL" target="_blank"><i>Link to visit project</i></a>
+                            <a class="nav-link" id="links" href="https://edgarval.github.io/Node.js-MySQL/" target="_blank"><i>Link to visit project</i></a>
                             </div>
                         </div>
                         <div class="card shadow p-3 mb-5 bg-white rounded">
