added new github links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Oregano" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
@@ -28,7 +28,7 @@
 
             <ul class="nav navbar-nav navbar-right">
                 <li class="nav-item">
-                    <a id="git" href="https://github.com/GrrrRocks" target="_blank"><i class="fab fa-github-square fa-fw"></i></a>
+                    <a id="git" href="https://github.com/EdgarVal" target="_blank"><i class="fab fa-github-square fa-fw"></i></a>
                 </li>
             
                 <li class="nav-item">
