fixed github link errors

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <div class="card-body">
                             <h5 class="card-title">Javascript</h5>
                             <p class="card-text">This app was made with Javascript for the logic & jQuery to manipulate the HTML. Layed out with valid HTML & stylish CSS.</p>
-                            <a class="nav-link" id="links" href="https://edgarval.github.io/unit-4-game/" target="_blank"><i>Link to visit project</i></a>
+                            <a class="nav-link" id="links" href="https://edgarval.github.io/trivia-game/ " target="_blank"><i>Link to visit project</i></a>
                             </div>
                         </div>
                         <div class="card shadow p-3 mb-5 bg-white rounded">
