--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <section class="main-section">
             <div class="wrapper">
                 <h1><i>Portfolio</i></h1>
-                <p>From front/back-end work, to Web Components & design, check out my latest web projects</p>
+                <p>From front/back-end work, Web Components & design, to group projects, check out my latest web projects</p>
             </div>
                 <div class="card-deck">
                         <div class="card shadow p-3 mb-5 bg-white rounded">
@@ -143,16 +143,16 @@
                             <img src="assets/photos/burger.png" class="card-img-top" alt="...">
                             <div class="card-body">
                             <h5 class="card-title">Node Express W/ Hanldebars</h5>
-                            <p class="card-text">A burger logger with MySQL, Node, Express, Handlebars and a homemade ORM</p>
-                            <a class="nav-link" id="links" href="https://dashboard.heroku.com/apps/grrrs-burgers" target="_blank"><i>Link to visit project</i></a>
+                            <p class="card-text">A burger logger with MySQL, Node, Express, Handlebars and a homemade ORM.</p>
+                            <a class="nav-link" id="links" href="https://grrrs-burgers.herokuapp.com/index" target="_blank"><i>Link to visit project</i></a>
                             </div>
                         </div>
                         <div class="card shadow p-3 mb-5 bg-white rounded">
-                            <img src="assets/photos/pexel.png" class="card-img-top" alt="...">
+                            <img src="assets/photos/pro-2.png" class="card-img-top" alt="...">
                             <div class="card-body">
-                            <h5 class="card-title">Next Project</h5>
-                            <p class="card-text">Description Here</p>
-                            <a class="nav-link" id="links" href="" target="_blank"><i>Link to visit project</i></a>
+                            <h5 class="card-title">Group 2 Project</h5>
+                            <p class="card-text">This app was made by me & a group of 3 others. Deployed to Heroku. This project focused more on the back-end aspects we focused on towards the middle of the boot-camp. Required Mysql database/Node & Express/folder structure meeting MVC Paradigm/GET-POST routes & a polished frontend UI.</p>
+                            <a class="nav-link" id="links" href="https://floating-beyond-23151.herokuapp.com/" target="_blank"><i>Link to visit project</i></a>
                             </div>
                         </div>
                     </div>
